day4/day4-yaml/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
spec:
  containers:
    - name: load-pod
      image: fortio/fortio
      args: ["load", "-t", "0", "-qps", "30", "hpa-deployment.default.svc.cluster.local"]
  restartPolicy: Never
