day4/day4-yaml/noschedule-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: noschedule-pod
spec:
  containers:
  - name: nginx
    image: nginx
  tolerations:
  - key: "env"
    operator: "Equal"
    value: "prod"  
    effect: "NoSchedule"
