day4/day4-yaml/noschedule-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: noschedule-pod2
spec:
  containers:
  - name: nginx
    image: nginx
