day4/day4-yaml/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-deploy
  template:
    metadata:
      labels:
        app: web-deploy
    spec:
      nodeSelector:
        web-services: "true"
      containers:
      - name: nginx
        image: nginx:1.19.1
        ports:
        - containerPort: 80
