day4/day4-yaml/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  nodeSelector:
    web-services: "true"
  containers:
    - name: nginx
      image: nginx
